--- a/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
+++ b/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Tall Grass Should Be Left After Mowing</title>
-  <meta name="description" content="Mowing height affects how fast grass fills back in, how it handles heat and foot traffic, and how often thin or brown spots show up.">
+  <meta name="description" content="Mowing height affects how fast grass fills in, how it handles heat and foot traffic, and how often thin or brown spots appear.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -16,18 +16,15 @@
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How Tall Grass Should Be Left After Mowing">
-  <meta property="og:description" content="Mowing height affects how fast grass fills back in, how it handles heat and foot traffic, and how often thin or brown spots show up.">
+  <meta property="og:description" content="Mowing height affects how fast grass fills in, how it handles heat and foot traffic, and how often thin or brown spots appear.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-tall-grass-should-be-left-after-mowing.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -43,7 +40,6 @@
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
 
-    <!-- On-site search (autocomplete; never leaves your site) -->
     <div class="search-wrap" role="search">
       <input
         id="siteSearch"
@@ -51,46 +47,42 @@
         type="search"
         placeholder="Search GrizzlyGreens..."
         autocomplete="off"
-        autocapitalize="off"
         spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
       >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
+      <div id="searchResults" class="search-results"></div>
     </div>
   </header>
 
   <main class="container">
     <h1>How Tall Grass Should Be Left After Mowing</h1>
 
-<h2>Residual height as an energy control</h2>
-<p>The height left after mowing decides how well the lawn holds up between cuts. Leaving grass a bit taller usually keeps it looking fuller and more even. Cutting it too short often leads to thin spots that show up a few days later.</p>
-<p>Mowing height is also one of the easiest things to control week to week. A small change up or down can make a noticeable difference in how the yard looks. A yard that stays consistently a little taller usually needs fewer “fixes” later.</p>
+<h2>Why mowing height matters more than it seems</h2>
+<p>The height left after mowing has a big impact on how the lawn looks over the next week or two. Leaving grass a little taller usually keeps it thicker and more even. Cutting it too short often leads to thin or dull areas that show up after a few days.</p>
+<p>Mowing height is one of the easiest things to adjust without spending money. Small changes can make a noticeable difference in how steady the yard looks. Lawns kept slightly taller usually need fewer fixes later.</p>
 
-<h2>Leaf area, photosynthesis, and recovery dynamics</h2>
-<p>When grass is left with enough height, it fills back in faster after mowing. It also hides small rough patches better, so the yard looks cleaner longer. That keeps mowing from turning into a constant cycle of damage and repair.</p>
-<p>When grass is cut too short, it tends to look good for a day and then start fading or thinning. Heat and missed watering hurt more during that time. Picking the right height depends on what kind of grass is in the yard, and <a href="what-type-of-grass-do-i-have.html">What Type of Grass Do I Have</a> helps sort that out.</p>
+<h2>How fast the lawn fills back in</h2>
+<p>Grass that is left with some height fills back in faster after each cut. The yard stays fuller and hides minor uneven spots better. This keeps mowing from turning into a cycle of cutting and waiting for recovery.</p>
+<p>When grass is cut too short, it often looks fine right away and then fades or thins. Heat and missed watering affect it more during that time. Choosing the right height depends on the grass type, and <a href="what-type-of-grass-do-i-have.html">What Type of Grass Do I Have</a> can help identify it.</p>
 
-<h2>Root structure and nutrient uptake stability</h2>
-<p>Lawns that are mowed a bit higher usually stay steadier in color and thickness. They handle short dry spells better and don’t get patchy as quickly. This is especially noticeable in sunny yards.</p>
-<p>Short mowing makes the yard more touchy about watering and feeding. It can go dull or thin even when fertilizer is being used. Raising the mowing height often improves the look more than adding extra product.</p>
+<h2>How steady the lawn looks over time</h2>
+<p>Lawns that are mowed higher tend to keep a more consistent color and thickness. They handle short dry stretches better and don’t change as quickly from week to week. This is especially noticeable in yards with full sun.</p>
+<p>Short mowing makes the lawn more sensitive to small issues. Uneven watering or skipped feedings show up faster as dull or thin areas. Raising the mower height often improves appearance more than adding extra treatments.</p>
 
-<h2>Respiration demand and temperature sensitivity</h2>
-<p>Hot weather is where mowing height starts to matter most. A short-cut lawn often struggles during a heat wave and can turn uneven fast. A higher cut usually stays greener and thicker through the same stretch.</p>
-<p>In mild weather, short cuts can seem fine because the yard isn’t under as much pressure. In heat, the same cut can lead to thinning that takes weeks to grow out. Keeping the mower higher in summer is one of the simplest ways to reduce problems.</p>
+<h2>How heat changes mowing results</h2>
+<p>Hot weather is when mowing height starts to matter most. A lawn cut too short can struggle during heat and lose its even look. A higher cut usually stays thicker and greener through the same conditions.</p>
+<p>During mild weather, short cuts may not cause problems right away. In summer heat, the same cut can lead to thinning that takes weeks to grow out. Keeping the mower higher during hot months reduces stress.</p>
 
-<h2>Soil temperature buffering and moisture retention</h2>
-<p>Grass that is left taller shades the soil and helps it hold moisture longer. That means less drying between waterings and fewer stressed areas. It also makes the yard look better on the hottest afternoons.</p>
-<p>When grass is cut very short, the ground heats up faster and dries out quicker. This is often worst along sidewalks, driveways, and curbs where heat builds up. If the edge strip keeps dying back, <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> explains the common causes.</p>
+<h2>Why short grass dries out faster</h2>
+<p>Taller grass shades the ground and helps it stay damp longer. This slows drying and helps the lawn look better between waterings. It also reduces stress during sunny afternoons.</p>
+<p>Very short grass allows the ground to heat up and dry out quickly. This problem is common near sidewalks and driveways where heat builds up. <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> explains why those areas struggle.</p>
 
-<h2>Mechanical stress and recovery capacity</h2>
-<p>Foot traffic, pets, and mower wheels all wear on a yard over time. Leaving more height helps the lawn handle that wear without showing it as quickly. It also makes ruts and scuffs less obvious.</p>
-<p>Short grass shows damage faster and takes longer to thicken back up. Busy areas can start looking thin because they never get a chance to recover. A slightly higher cut often improves those zones without changing anything else.</p>
+<h2>How mowing height affects wear and traffic</h2>
+<p>Foot traffic, pets, and mower wheels all put wear on the yard. Leaving grass a bit taller helps it handle that wear without thinning as fast. Scuffs and flattened spots are less noticeable.</p>
+<p>Short grass shows damage sooner and takes longer to recover. Busy areas may never fully fill in if they are cut too low. A slightly higher cut often improves these spots without other changes.</p>
 
-<h2>Conclusion</h2>
-<p>Residual mowing height affects how the lawn looks, how quickly it fills back in, and how well it handles summer conditions. A taller cut usually means fewer thin spots and a more even yard. A very short cut often trades short-term neatness for longer-term problems.</p>
-<p>The best results come from sticking with a height the yard can handle week after week. Letting it get stressed repeatedly tends to show up as thinning that takes time to fix. If maintenance gets skipped for long stretches, <a href="can-grass-adapt-to-neglect.html">Can Grass Adapt to Neglect</a> lays out what typically happens.</p>
+<h2>What consistent mowing leads to long term</h2>
+<p>Mowing height affects how the lawn looks, how quickly it fills back in, and how well it handles tough conditions. Taller cuts usually mean fewer thin spots and more even coverage. Very short cuts often trade short-term neatness for longer problems.</p>
+<p>The best results come from keeping a height the lawn can handle week after week. Repeated stress eventually shows up as thinning that takes time to fix. <a href="can-grass-adapt-to-neglect.html">Can Grass Adapt to Neglect</a> explains what happens when care is skipped too often.</p>
   </main>
 
   <footer class="site-footer">
@@ -103,8 +95,6 @@
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
-<!-- :contentReference[oaicite:0]{index=0} -->
