--- a/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
+++ b/lawn-basics/how-tall-grass-should-be-left-after-mowing.html
@@ -11,9 +11,17 @@
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="How Tall Grass Should Be Left After Mowing">
+  <meta name="twitter:description" content="Mowing height affects how fast grass fills in, how it handles heat and foot traffic, and how often thin or brown spots appear.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
+
 
   <!-- Open Graph -->
-  <meta property="og:type" content="website">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How Tall Grass Should Be Left After Mowing">
   <meta property="og:description" content="Mowing height affects how fast grass fills in, how it handles heat and foot traffic, and how often thin or brown spots appear.">
@@ -90,7 +98,7 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
+     
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
