update grass page

--- a/lawn-basics/best-grass-types-for-hot-dry-climates.html
+++ b/lawn-basics/best-grass-types-for-hot-dry-climates.html
@@ -5,27 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Best Grass Types for Hot Dry Climates</title>
-  <meta name="description" content="Heat- and drought-tolerant grass options for hot, dry regions, with blunt pros, cons, and choosing factors like sun, soil, and irrigation limits.">
+  <meta name="description" content="Hot, dry climates can ruin the wrong lawn. Some grass types handle heat, sun, and low water far better than others year after year.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/best-grass-types-for-hot-dry-climates.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Best Grass Types for Hot Dry Climates">
-  <meta property="og:description" content="Heat- and drought-tolerant grass options for hot, dry regions, with blunt pros, cons, and choosing factors like sun, soil, and irrigation limits.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/best-grass-types-for-hot-dry-climates.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Best Grass Types for Hot Dry Climates">
+  <meta name="twitter:description" content="Hot, dry climates can ruin the wrong lawn. Some grass types handle heat, sun, and low water far better than others year after year.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <!-- Open Graph -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="Best Grass Types for Hot Dry Climates">
+  <meta property="og:description" content="Hot, dry climates can ruin the wrong lawn. Some grass types handle heat, sun, and low water far better than others year after year.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/best-grass-types-for-hot-dry-climates.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -41,7 +48,6 @@
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
 
-    <!-- On-site search (autocomplete; never leaves your site) -->
     <div class="search-wrap" role="search">
       <input
         id="siteSearch"
@@ -49,68 +55,38 @@
         type="search"
         placeholder="Search GrizzlyGreens..."
         autocomplete="off"
-        autocapitalize="off"
         spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
       >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
+      <div id="searchResults" class="search-results"></div>
     </div>
   </header>
 
   <main class="container">
     <h1>Best Grass Types for Hot Dry Climates</h1>
 
-<h2>What “hot and dry” really means for turf</h2>
-<p>Hot, dry climates punish shallow roots and thin leaf cover. Heat stress stacks with low humidity, wind, and reflective hardscapes.</p>
-<p>The winning grasses either use water efficiently, build deep roots, or tolerate dormancy without dying.</p>
-<p>No grass stays perfect through extreme heat with limited water. The goal is survival with acceptable appearance.</p>
+<h2>Why hot, dry weather exposes weak lawns</h2>
+<p>Heat and low rainfall quickly show which lawns are built to last. Some grasses thin out, turn brown, or stop growing once summer settles in. Choosing the right grass makes a huge difference in how the yard holds up.</p>
+<p>A grass that fits dry conditions usually stays thicker with less water. It also avoids the constant cycle of patching and reseeding. That makes summer far easier to manage.</p>
 
-<h2>Warm-season grasses usually win here</h2>
-<p>Most top performers in hot, dry regions are warm-season grasses. They grow hardest in summer when cool-season grasses struggle.</p>
-<p>They also tend to recover faster from heat stress when irrigation is consistent.</p>
-<p>Cool-season lawns in these climates often require heavy water and constant rescue work.</p>
+<h2>Grass that holds up under sun and drought</h2>
+<p>The best grasses for hot climates are the ones that stay steady during long dry stretches. They don’t fall apart when watering is reduced or when temperatures stay high. This keeps the yard from looking burnt out.</p>
+<p>Lawns that are not suited for heat often fail first in stressed areas. Shaded zones near large plants can also struggle even when the rest of the yard looks fine. <a href="why-grass-near-trees-struggles.html">Why Grass Near Trees Struggles</a> explains why those spots are harder to keep healthy.</p>
 
-<h2>Bermudagrass: tough and fast, but not subtle</h2>
-<p>Bermudagrass handles heat, sun, and traffic well. It repairs quickly because it spreads aggressively.</p>
-<p>The downside is that it can invade beds and edges. Shade tolerance is poor, and it can thin in partial shade.</p>
-<p>It often goes dormant and turns tan in cool months unless winter color is maintained by other methods.</p>
+<h2>How extreme heat affects lawn appearance</h2>
+<p>During extreme heat, some lawns keep their shape while others collapse fast. The right grass type stays more even and avoids sudden bare patches. This helps the yard keep a cleaner look through summer.</p>
+<p>When grass is a poor match, heat damage shows quickly and can linger. Recovery often takes weeks or longer once temperatures cool. <a href="can-grass-survive-extreme-heat.html">Can Grass Survive Extreme Heat</a> covers what usually happens during long heat waves.</p>
 
-<h2>Zoysiagrass: slower, denser, and more controlled</h2>
-<p>Zoysia forms a dense turf that can reduce weed pressure. Heat tolerance is strong once established.</p>
-<p>Establishment and repair are slower than bermuda. Damage can linger longer.</p>
-<p>It can handle some light shade better than bermuda, but deep shade still causes decline.</p>
+<h2>Foot traffic and wear during hot months</h2>
+<p>Summer lawns still deal with foot traffic, pets, and regular use. Grasses suited for dry heat tend to handle this wear better. They stay intact instead of thinning out under pressure.</p>
+<p>Weak grasses show damage faster in hot weather. Busy areas turn thin because they never get a break from stress. A heat-tolerant lawn holds together longer.</p>
 
-<h2>Buffalograss: low-input option for full sun</h2>
-<p>Buffalograss is known for low water needs and good heat tolerance. It fits low-maintenance goals in very sunny yards.</p>
-<p>It does not handle heavy traffic as well as bermuda. It can look sparse compared to denser turf types.</p>
-<p>Best results come from matching it to the right use case: big sunny areas, lighter wear, and minimal irrigation.</p>
+<h2>Maintenance habits that matter in dry climates</h2>
+<p>Mowing and upkeep matter more when water is limited. Cutting too short or using equipment carelessly can make heat damage worse. Simple habits help protect the lawn.</p>
+<p>Safe mowing and basic tool awareness prevent extra stress. Accidents and damage often come from rushed work. <a href="tools-safety/common-lawn-tool-safety-hazards.html">Common Lawn Tool Safety Hazards</a> highlights mistakes that can harm both the yard and the person maintaining it.</p>
 
-<h2>St. Augustine: heat-tolerant, but water hungry</h2>
-<p>St. Augustine tolerates heat and can handle more shade than bermuda. That helps in yards with trees or buildings.</p>
-<p>It usually needs more water than the most drought-tolerant choices. In true dry conditions, it declines fast without irrigation.</p>
-<p>It is a reasonable pick when shade is the limiting factor and irrigation is available.</p>
-
-<h2>Seashore paspalum: strong performer with specific needs</h2>
-<p>Seashore paspalum can handle heat and is known for tolerance to salty irrigation water in some settings.</p>
-<p>It is not a universal solution. It has management requirements and may not be practical in every residential yard.</p>
-<p>It fits best when water quality or salinity is a real constraint and the lawn care plan is consistent.</p>
-
-<h2>Why cool-season grasses struggle in hot, dry regions</h2>
-<p>Cool-season grasses can look great in spring, then collapse in sustained heat. Recovery can be slow and patchy.</p>
-<p>Keeping them green through summer often requires frequent watering and higher mowing. That raises cost and risk.</p>
-<p>They can still work in high-elevation or milder desert-edge zones, but they are usually the hard mode choice.</p>
-
-<h2>Selection checklist that actually matters</h2>
-<ul>
-  <li>Sun exposure: full sun favors bermuda, zoysia, and buffalograss; shade pressure pushes toward more shade-tolerant options.</li>
-  <li>Irrigation reality: limited irrigation pushes toward lower-input grasses; reliable irrigation opens more choices.</li>
-  <li>Traffic: kids, pets, and foot traffic push toward faster-repairing turf like bermuda.</li>
-  <li>Edges and containment: aggressive spreaders need barriers and clean edging plans.</li>
-  <li>Winter appearance: warm-season grass often goes dormant and changes color in cool months.</li>
-</ul>
-<p>Pick the grass that matches the worst constraint. A grass that fights the site will lose long-term.</p>
+<h2>Choosing grass for long-term success</h2>
+<p>The best grass for hot, dry climates is one that stays reliable year after year. It doesn’t demand constant watering or repairs just to survive. The lawn looks more stable with less effort.</p>
+<p>Heat and drought are unavoidable in some regions. A grass that fits those conditions reduces frustration and keeps the yard usable. That long-term consistency is what makes the right choice worthwhile.</p>
   </main>
 
   <footer class="site-footer">
@@ -118,12 +94,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
